@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: t_api.h,v 1.15 2004/03/05 05:13:59 marka Exp $ */
+/* $Id: t_api.h,v 1.15.18.1 2004/06/21 06:45:19 marka Exp $ */
 
 #ifndef TESTS_T_API_H
 #define TESTS_T_API_H 1
@@ -37,6 +37,7 @@
 #define	T_UNRESOLVED	0x3
 #define	T_UNSUPPORTED	0x4
 #define	T_UNTESTED	0x5
+#define	T_THREADONLY	0x6
 
 /*
  *
